force-app/main/default/objects/EventSphere_Speaker__c/EventSphere_Speaker__c.object-meta.xml
<CustomObject>
    <label>EventSphere Speaker</label>
    <nameField>
        <label>Speaker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EventSphere Speakers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>