force-app/main/default/objects/EventSphere_Speaker__c/fields/Biography__c.field-meta.xml
<CustomField>
    <fullName>Biography__c</fullName>
    <label>Biography</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>