force-app/main/default/objects/EventSphere_Speaker__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the event assigned to the speaker.</description>
    <inlineHelpText>Select the EventSphere Event where this speaker is presenting.</inlineHelpText>
    <label>Event</label>
    <referenceTo>EventSphere_Event__c</referenceTo>
    <relationshipLabel>EventSphere Speakers</relationshipLabel>
    <relationshipName>EventSphere_Speakers</relationshipName>
    <type>Lookup</type>
</CustomField>