force-app/main/default/objects/EventSphere_Speaker__c/fields/Speaker_Availability__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Availability__c</fullName>
    <inlineHelpText>Indicates the speaker&apos;s current availability for accepting new session assignments.</inlineHelpText>
    <label>Speaker Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>On Leave</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>