force-app/main/default/objects/EventSphere_Speaker__c/fields/Total_Assigned_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Total_Assigned_Sessions__c</fullName>
    <label>Total Assigned Sessions</label>
    <summaryForeignKey>Speaker_Session_Assignment__c.Speaker__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>